--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "make test"
+    "test": "./node_modules/.bin/mocha ./test/*"
   },
   "repository": {
     "type": "git",
@@ -15,8 +15,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "should": "3.3.1",
-    "mocha": "1.18.2"
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "mocha": "^7.0.0"
   },
   "keywords": [
     "pdf",
